tests/ui/typeck/issue-114918/const-in-impl-fn-return-type.current.stderr
error[E0308]: mismatched types
  --> $DIR/const-in-impl-fn-return-type.rs:20:39
   |
LL |     fn func<const N: u32>() -> [(); { () }] {
   |                                       ^^ expected `usize`, found `()`

error: the constant `N` is not of type `usize`
  --> $DIR/const-in-impl-fn-return-type.rs:12:32
   |
LL |     fn func<const N: u32>() -> [(); N];
   |                                ^^^^^^^ expected `usize`, found `u32`
   |
   = note: the length of array `[(); N]` must be type `usize`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
